# ddareuwang

./: .dockerignore  .gitignore  .slugignore  1216_cloud.py  Dockerfile  Dockerfile.dev  README.md  app_cloudsql.py  build.json  compose.yaml  compose.yml  docker-compose.dev.yml  fly.toml  pyproject.toml  requirements.txt
flask_server/: .gitignore  Dockerfile  app.py  backup.py  requirements.txt  station_id_list.txt  workspace_1122.py
flask_server/.github/workflows/: build.json
flask_server/data/: LSTM_stations.txt  LSTM_target_stations.txt  final_stations_109.txt  group3_stations.txt  station_facilities.csv  station_input.csv  station_input_1121_ver2.csv  station_latlon.csv  zone1_distance.csv  zone2_distance.csv  zone_id_list.txt
flask_server/model/: 23SF_RentalPredict_model.pkl  241121_model_ver2.pkl  250106_NEW_LGBMmodel.pkl
flask_server/static/: station_1_list.txt
flask_server/static/css/: style.css
flask_server/static/js/: main.js  saving.js  script.js  sub.js  test.js
flask_server/templates/: nuri_amend.html  zone1.html  zone2.html
