[project]
name = "ddareuwang"
version = "0.1.0"
description = ""
authors = [
    {name = "pompom33", email = "nymphyuna@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "google-cloud-bigquery (>=3.29.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "flask_server"}]
